traefik/traefik-config/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefiktest.timo.be`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: secureheaders
          namespace: traefik
        - name: ratelimit
          namespace: traefik
  tls:
    secretName: wildcard-timo-be-staging-tls
